--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 .container {
   margin-top: auto;
 }
+
+body {
+    
+  font-size: 12px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif; 
+}
+
+*{
+  box-sizing: border-box; 
+}
+
+h3{
+  font-weight: medium;
+}
